--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,13 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>4.3.0.Final</version>			
+			<version>4.3.1.Final</version>			
+		</dependency>
+		
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>1.1.0.Beta2</version>
 		</dependency>
 	</dependencies>
 
