--- a/pom.xml
+++ b/pom.xml
@@ -19,38 +19,50 @@
   		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.8</version>
+			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.6.1</version>
+			<version>1.7.3</version>
 		</dependency>
 
 		<dependency>
     		<groupId>ch.qos.logback</groupId>
     		<artifactId>logback-core</artifactId>
-    		<version>0.9.26</version>
+    		<version>1.0.9</version>
 		</dependency>
 
 		<dependency>
     		<groupId>ch.qos.logback</groupId>
     		<artifactId>logback-classic</artifactId>
-    		<version>0.9.26</version>
+    		<version>1.0.9</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>4.3.1.Final</version>			
+			<version>5.0.1.Final</version>			
 		</dependency>
 		
 		<dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
-			<version>1.1.0.Beta2</version>
+			<version>1.1.0.Final</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.glassfish</groupId>
+		    <artifactId>javax.el</artifactId>
+		    <version>3.0.0</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>javax.el</groupId>
+		    <artifactId>javax.el-api</artifactId>
+		    <version>3.0.0</version>
 		</dependency>
 	</dependencies>
 
